--- a/Sprint1/src/sprint1/site.fxml
+++ b/Sprint1/src/sprint1/site.fxml
@@ -1,10 +1,9 @@
 <?import javafx.geometry.Insets?>
-
 <?import javafx.scene.control.Button?>
-
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
@@ -15,6 +14,7 @@
 <?import javafx.scene.control.MenuItem?>
 
 <BorderPane fx:controller="sprint1.Controller"
+			fx:id="mainFrame"
 			xmlns:fx="http://javafx.com/fxml" >
 		<top>
 			<MenuBar>
@@ -27,6 +27,7 @@
 				</Menu>
 			</MenuBar>
 		</top>
+		
 		<left>
 			<ListView fx:id="options" onMouseClicked="#handleClickListView">
 				
@@ -34,16 +35,15 @@
 		</left>
 		
 		<center>
-			<VBox>
-				<TextArea promptText="Welcome to Team 8 Site Manager" fx:id="optionInstructions" />
-				<VBox fx:id="mainFunction">
-					
-				</VBox>
-			</VBox>
-			
-			
+
+			<GridPane fx:id="mainFunction" vgap="10" hgap="10">
+				
+			</GridPane>
+
 		</center>
-			
+		<bottom>
+		<TextArea promptText="Welcome to Team 8 Site Manager" fx:id="optionInstructions" />
+		</bottom>
 </BorderPane>
 
 			
